fixed button on mobile

--- a/src/styles/components/_contactForm.scss
+++ b/src/styles/components/_contactForm.scss
@@ -33,6 +33,9 @@ form {
     }
     &[type="submit"] {
       flex-grow: 1;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
     }
     padding: 10px;
     @media screen and (max-width: $md-screen) {
